--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "route": "/api/Profile",
+      "route": "/api/profile",
       "allowedRoles": ["authenticated"]
     },
     {
