--- a/.api/local.settings.json
+++ b/.api/local.settings.json
@@ -3,6 +3,6 @@
   "Values": {
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "AzureWebJobsStorage": "",
-    "JWT_SECRET": "LOCAL_SECRET_KEY"
+    "GEMINI_API_KEY": "AIzaSyB-RIjhhODp6aPTzqVcwbXD894oebXFCUY"
   }
 }
