--- a/.api/package.json
+++ b/.api/package.json
@@ -7,6 +7,7 @@
     "start": "func start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^8.5.1"
   }
